--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: node_js
 node_js: 14
 
-before_script:
-    - npm install -g bower
-    - bower install
+cache:
+  directories:
+    - node_modules
+
+before_install:
+  - npm update
+
+install:
+  - npm install
+
+script:
+  - npm test
